--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,78 @@
-body {
+* {
   padding: 0;
   margin: 0;
+}
+body {
   font-size: 16px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.header-section::before {
+  content: "";
+  background-image: url("./images/шелк-фон.jpg");
+  background-size: contain;
+  opacity: 0.2;
+  height: 600px;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.header-section {
+  background-color: #fffbdb;
+  height: 600px;
+  opacity: 0.5;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.header-section h1 {
+  font-size: 3rem;
+}
+
+.header-section .names {
+  font-size: 2.5rem;
+}
+
+.photo-1 {
+  transform: rotate(15deg);
+  background-image: url(./images/фото-1.jpg);
+  left: 12%;
+  top: 20%;
+}
+.photo-2 {
+  transform: rotate(-5deg);
+  background-image: url(./images/фото-2.jpg);
+  left: 12%;
+  top: 45%;
+}
+.photo-3 {
+  transform: rotate(-12deg);
+  background-image: url(./images/фото-3.jpg);
+  left: 75%;
+  top: 20%;
+}
+.photo-4 {
+  transform: rotate(7deg);
+  background-image: url(./images/фото-4.jpg);
+  left: 75%;
+  top: 45%;
+}
+
+.photo-1,
+.photo-2,
+.photo-3,
+.photo-4 {
+  width: 200px;
+  height: 200px;
+  border: 2px solid #656da2;
+  position: absolute;
+  background-size: contain;
+  opacity: 1;
 }
