--- a/styles.css
+++ b/styles.css
@@ -178,3 +178,45 @@ body {
   gap: 1rem;
   align-items: center;
 }
+
+.dress-code {
+  height: 400px;
+  background-color: #cf6363;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  color: rgb(58, 54, 54);
+}
+
+.dress-code h2 {
+  font-size: 3rem;
+}
+
+.dress-code .dress-info {
+  font-size: 2.5rem;
+}
+
+.dress-photo-1 {
+  background-image: url(./images/dresscode-1.jpg);
+  left: 12%;
+  top: 20%;
+  transform: rotate(-10deg);
+}
+.dress-photo-2 {
+  background-image: url(./images/dresscode-2.jpg);
+  left: 68%;
+  top: 20%;
+  transform: rotate(10deg);
+}
+.dress-photo-1,
+.dress-photo-2 {
+  width: 300px;
+  height: 220px;
+  position: absolute;
+  background-size: cover;
+  background-position: center;
+  border-radius: 1rem;
+}
