--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 * {
   padding: 0;
   margin: 0;
+  font-family: "Rosarium";
 }
 body {
-  font-size: 16px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 24px;
 }
 
 .header-section::before {
@@ -115,7 +115,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 4rem;
+  gap: 3.5rem;
   flex-direction: column;
   box-sizing: border-box;
 }
@@ -123,7 +123,7 @@ body {
 .schedule,
 .schedule::before,
 .schedule::after {
-  height: 700px;
+  height: 750px;
 }
 
 .schedule::before {
@@ -199,6 +199,7 @@ body {
   flex-direction: column;
   gap: 1rem;
   align-items: center;
+  text-align: center;
 }
 
 .dress-code {
