--- a/styles.css
+++ b/styles.css
@@ -229,7 +229,7 @@ body {
 
 .dress-photo-1 {
   background-image: url(./images/dresscode-1.jpg);
-  left: 12%;
+  left: 10%;
   top: 20%;
   transform: rotate(-10deg);
 }
@@ -292,4 +292,481 @@ body {
 
 .last-word h3 {
   font-size: 2.5rem;
+}
+
+@media screen and (max-width: 1280px) {
+  body {
+    font-size: 20px;
+  }
+
+  .header-section::before,
+  .header-section::after,
+  .header-section {
+    height: 400px;
+  }
+
+  .header-section {
+    gap: 2rem;
+  }
+
+  .header-section h1 {
+    font-size: 2rem;
+  }
+
+  .header-section .names {
+    font-size: 1.5rem;
+  }
+
+  .photo-1 {
+    transform: rotate(15deg);
+    background-image: url(./images/фото-1.jpg);
+    left: 5%;
+    top: 26%;
+  }
+  .photo-2 {
+    transform: rotate(-5deg);
+    background-image: url(./images/фото-2.jpg);
+    left: 5%;
+    top: 45%;
+  }
+  .photo-3 {
+    transform: rotate(-12deg);
+    background-image: url(./images/фото-3.jpg);
+    left: 78%;
+    top: 26%;
+  }
+  .photo-4 {
+    transform: rotate(7deg);
+    background-image: url(./images/фото-4.jpg);
+    left: 78%;
+    top: 45%;
+  }
+
+  .photo-1,
+  .photo-2,
+  .photo-3,
+  .photo-4 {
+    width: 130px;
+    height: 130px;
+  }
+
+  .info {
+    gap: 10rem;
+  }
+
+  .info .block {
+    gap: 0.5rem;
+  }
+
+  .info .block h3 {
+    font-size: 1.2rem;
+  }
+
+  .schedule {
+    gap: 3.5rem;
+  }
+
+  .schedule,
+  .schedule::before,
+  .schedule::after {
+    height: 750px;
+  }
+
+  .schedule .timeline {
+    height: 10px;
+    width: 80%;
+  }
+
+  .schedule .timeline .circle {
+    height: 20px;
+    width: 20px;
+  }
+
+  .calendar {
+    width: 400px;
+    height: 400px;
+  }
+
+  .calendar .heart {
+    width: 60px;
+    height: 50px;
+    right: 0;
+    top: 57%;
+  }
+
+  .time-info {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .time-info .block {
+    width: 10rem;
+    gap: 1rem;
+  }
+
+  .dress-code {
+    height: 280px;
+    gap: 2.5rem;
+  }
+
+  .dress-code h2 {
+    font-size: 2rem;
+  }
+
+  .dress-code .dress-info {
+    font-size: 1.5rem;
+  }
+
+  .dress-photo-1 {
+    left: 13%;
+    top: 30%;
+    transform: rotate(-10deg);
+  }
+  .dress-photo-2 {
+    left: 70%;
+    top: 30%;
+    transform: rotate(10deg);
+  }
+  .dress-photo-1,
+  .dress-photo-2 {
+    width: 150px;
+    height: 110px;
+    border-radius: 1rem;
+  }
+
+  .last-word,
+  .last-word::before,
+  .last-word::after {
+    height: 200px;
+  }
+
+  .last-word {
+    padding: 3rem;
+  }
+
+  .last-word h3 {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 18px;
+  }
+
+  .header-section::before,
+  .header-section::after,
+  .header-section {
+    height: 300px;
+  }
+
+  .header-section {
+    gap: 2rem;
+  }
+
+  .header-section h1 {
+    font-size: 1.5rem;
+    max-width: 180px;
+    text-align: center;
+  }
+
+  .header-section .names {
+    font-size: 1.2rem;
+  }
+
+  .photo-1 {
+    transform: rotate(15deg);
+    background-image: url(./images/фото-1.jpg);
+    left: 11%;
+    top: 23%;
+  }
+  .photo-2 {
+    transform: rotate(-5deg);
+    background-image: url(./images/фото-2.jpg);
+    left: 11%;
+    top: 42%;
+  }
+  .photo-3 {
+    transform: rotate(-12deg);
+    background-image: url(./images/фото-3.jpg);
+    left: 70%;
+    top: 23%;
+  }
+  .photo-4 {
+    transform: rotate(7deg);
+    background-image: url(./images/фото-4.jpg);
+    left: 70%;
+    top: 42%;
+  }
+
+  .photo-1,
+  .photo-2,
+  .photo-3,
+  .photo-4 {
+    width: 100px;
+    height: 100px;
+  }
+
+  .info {
+    gap: 2rem;
+  }
+
+  .info .block {
+    gap: 0.5rem;
+  }
+
+  .info .block h3 {
+    font-size: 1rem;
+  }
+
+  .schedule {
+    gap: 3rem;
+  }
+
+  .schedule,
+  .schedule::before,
+  .schedule::after {
+    height: 500px;
+  }
+
+  .schedule .timeline {
+    height: 10px;
+    width: 80%;
+  }
+
+  .schedule .timeline .circle {
+    height: 20px;
+    width: 20px;
+  }
+
+  .calendar {
+    width: 250px;
+    height: 250px;
+  }
+
+  .calendar .heart {
+    width: 40px;
+    height: 30px;
+    right: 0;
+    top: 57%;
+  }
+
+  .time-info {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .time-info .block {
+    width: 10rem;
+    gap: 1rem;
+  }
+
+  .dress-code {
+    height: 200px;
+    gap: 2.5rem;
+  }
+
+  .dress-code h2 {
+    font-size: 2rem;
+  }
+
+  .dress-code .dress-info {
+    font-size: 1.5rem;
+  }
+
+  .dress-photo-1 {
+    left: 4%;
+    top: 27%;
+    transform: rotate(-10deg);
+  }
+  .dress-photo-2 {
+    left: 71%;
+    top: 27%;
+    transform: rotate(10deg);
+  }
+  .dress-photo-1,
+  .dress-photo-2 {
+    width: 120px;
+    height: 90px;
+    border-radius: 1rem;
+  }
+
+  .last-word,
+  .last-word::before,
+  .last-word::after {
+    height: 150px;
+  }
+
+  .last-word {
+    padding: 3rem;
+  }
+
+  .last-word h3 {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  body {
+    font-size: 14px;
+  }
+
+  .header-section::before,
+  .header-section::after,
+  .header-section {
+    height: 280px;
+  }
+
+  .header-section {
+    gap: 1rem;
+  }
+
+  .header-section h1 {
+    font-size: 1.2rem;
+    max-width: 150px;
+    text-align: center;
+  }
+
+  .header-section .names {
+    font-size: 1rem;
+  }
+
+  .photo-1 {
+    transform: rotate(15deg);
+    background-image: url(./images/фото-1.jpg);
+    left: 5%;
+    top: 23%;
+  }
+  .photo-2 {
+    transform: rotate(-5deg);
+    background-image: url(./images/фото-2.jpg);
+    left: 5%;
+    top: 42%;
+  }
+  .photo-3 {
+    transform: rotate(-12deg);
+    background-image: url(./images/фото-3.jpg);
+    left: 68%;
+    top: 23%;
+  }
+  .photo-4 {
+    transform: rotate(7deg);
+    background-image: url(./images/фото-4.jpg);
+    left: 68%;
+    top: 42%;
+  }
+
+  .photo-1,
+  .photo-2,
+  .photo-3,
+  .photo-4 {
+    width: 80px;
+    height: 80px;
+  }
+
+  .info {
+    gap: 2rem;
+    flex-direction: column;
+    height: auto;
+    padding: 2rem 0;
+  }
+
+  .info .block {
+    gap: 0.5rem;
+  }
+
+  .info .block h3 {
+    font-size: 1rem;
+  }
+
+  .schedule {
+    gap: 3rem;
+  }
+
+  .schedule,
+  .schedule::before,
+  .schedule::after {
+    height: 450px;
+  }
+
+  .schedule .timeline {
+    height: 5px;
+    width: 80%;
+  }
+
+  .schedule .timeline .circle {
+    height: 10px;
+    width: 10px;
+  }
+
+  .calendar {
+    width: 200px;
+    height: 200px;
+  }
+
+  .calendar .heart {
+    width: 36px;
+    height: 29px;
+    right: 0;
+    top: 56%;
+  }
+
+  .time-info {
+    width: 80%;
+    gap: 0;
+  }
+
+  .time-info .block {
+    width: 5rem;
+    gap: 0.2rem;
+    font-size: 0.7rem;
+  }
+
+  .dress-code {
+    height: 150px;
+    gap: 1rem;
+  }
+
+  .dress-code h2 {
+    font-size: 1.2rem;
+  }
+
+  .dress-code .dress-info {
+    font-size: 1.5rem;
+  }
+
+  .dress-photo-1 {
+    left: 4%;
+    top: 15%;
+    transform: rotate(-8deg);
+  }
+  .dress-photo-2 {
+    left: 66%;
+    top: 15%;
+    transform: rotate(8deg);
+  }
+  .dress-photo-1,
+  .dress-photo-2 {
+    width: 90px;
+    height: 60px;
+    border-radius: 1rem;
+  }
+
+  .last-word,
+  .last-word::before,
+  .last-word::after {
+    height: 150px;
+  }
+
+  .last-word {
+    padding: 1rem;
+  }
+
+  .last-word h3 {
+    font-size: 1.5rem;
+  }
 }
