--- a/styles.css
+++ b/styles.css
@@ -42,11 +42,26 @@ body {
   z-index: 1;
   height: 600px;
   display: flex;
-  flex-direction: column;
   gap: 2rem;
   justify-content: center;
   align-items: center;
   position: relative;
+}
+
+.header-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  width: 30vw;
+}
+
+.left-photo,
+.right-photo {
+  position: relative;
+  width: 200px;
+  height: 100%;
 }
 
 .header-section h1 {
@@ -57,28 +72,28 @@ body {
   font-size: 2.5rem;
 }
 
+.text {
+  text-align: center;
+}
+
 .photo-1 {
   transform: rotate(15deg);
   background-image: url(./images/фото-1.jpg);
-  left: 15%;
   top: 16%;
 }
 .photo-2 {
   transform: rotate(-5deg);
-  background-image: url(./images/фото-2.jpg);
-  left: 15%;
+  background-image: url(./images/фото-4.jpg);
   top: 45%;
 }
 .photo-3 {
-  transform: rotate(-12deg);
+  transform: rotate(-10deg);
   background-image: url(./images/фото-3.jpg);
-  left: 72%;
-  top: 20%;
+  top: 17%;
 }
 .photo-4 {
-  transform: rotate(7deg);
-  background-image: url(./images/фото-4.jpg);
-  left: 72%;
+  transform: rotate(5deg);
+  background-image: url(./images/фото-2.jpg);
   top: 45%;
 }
 
@@ -88,7 +103,6 @@ body {
 .photo-4 {
   width: 200px;
   height: 200px;
-  border: 2px solid #656da2;
   position: absolute;
   background-size: cover;
   background-position: center;
@@ -222,6 +236,7 @@ body {
 
 .dress-code h2 {
   font-size: 3rem;
+  position: relative;
 }
 
 .dress-code .dress-info {
@@ -230,14 +245,14 @@ body {
 
 .dress-photo-1 {
   background-image: url(./images/dresscode-1.jpg);
-  left: 10%;
-  top: 20%;
+  top: -30%;
+  left: -300%;
   transform: rotate(-10deg);
 }
 .dress-photo-2 {
   background-image: url(./images/dresscode-2.jpg);
-  left: 68%;
-  top: 20%;
+  top: -30%;
+  right: -300%;
   transform: rotate(10deg);
 }
 .dress-photo-1,
@@ -319,28 +334,21 @@ body {
   }
 
   .photo-1 {
-    transform: rotate(15deg);
-    background-image: url(./images/фото-1.jpg);
-    left: 13%;
-    top: 26%;
+    top: 16%;
   }
   .photo-2 {
-    transform: rotate(-5deg);
-    background-image: url(./images/фото-2.jpg);
-    left: 13%;
     top: 45%;
   }
   .photo-3 {
-    transform: rotate(-12deg);
-    background-image: url(./images/фото-3.jpg);
-    left: 72%;
-    top: 26%;
+    top: 16%;
   }
   .photo-4 {
-    transform: rotate(7deg);
-    background-image: url(./images/фото-4.jpg);
-    left: 72%;
     top: 45%;
+  }
+
+  .left-photo,
+  .right-photo {
+    width: 130px;
   }
 
   .photo-1,
@@ -421,13 +429,13 @@ body {
   }
 
   .dress-photo-1 {
-    left: 13%;
-    top: 30%;
+    top: -30%;
+    left: -250%;
     transform: rotate(-10deg);
   }
   .dress-photo-2 {
-    left: 70%;
-    top: 30%;
+    top: -30%;
+    right: -250%;
     transform: rotate(10deg);
   }
   .dress-photo-1,
@@ -457,6 +465,10 @@ body {
     font-size: 18px;
   }
 
+  .text {
+    font-size: 14px;
+  }
+
   .header-section::before,
   .header-section::after,
   .header-section {
@@ -478,28 +490,16 @@ body {
   }
 
   .photo-1 {
-    transform: rotate(15deg);
-    background-image: url(./images/фото-1.jpg);
-    left: 16%;
-    top: 23%;
+    top: 16%;
   }
   .photo-2 {
-    transform: rotate(-5deg);
-    background-image: url(./images/фото-2.jpg);
-    left: 16%;
-    top: 42%;
+    top: 44%;
   }
   .photo-3 {
-    transform: rotate(-12deg);
-    background-image: url(./images/фото-3.jpg);
-    left: 65%;
-    top: 23%;
+    top: 16%;
   }
   .photo-4 {
-    transform: rotate(7deg);
-    background-image: url(./images/фото-4.jpg);
-    left: 65%;
-    top: 42%;
+    top: 44%;
   }
 
   .photo-1,
@@ -508,6 +508,10 @@ body {
   .photo-4 {
     width: 100px;
     height: 100px;
+  }
+  .left-photo,
+  .right-photo {
+    width: 100px;
   }
 
   .info {
@@ -580,13 +584,13 @@ body {
   }
 
   .dress-photo-1 {
-    left: 4%;
-    top: 27%;
+    top: -10%;
+    left: -160%;
     transform: rotate(-10deg);
   }
   .dress-photo-2 {
-    left: 71%;
-    top: 27%;
+    top: -10%;
+    right: -160%;
     transform: rotate(10deg);
   }
   .dress-photo-1,
@@ -616,6 +620,10 @@ body {
     font-size: 14px;
   }
 
+  .text {
+    font-size: 10px;
+  }
+
   .header-section::before,
   .header-section::after,
   .header-section {
@@ -637,28 +645,21 @@ body {
   }
 
   .photo-1 {
-    transform: rotate(15deg);
-    background-image: url(./images/фото-1.jpg);
-    left: 15%;
-    top: 23%;
+    top: 18%;
   }
   .photo-2 {
-    transform: rotate(-5deg);
-    background-image: url(./images/фото-2.jpg);
-    left: 15%;
-    top: 42%;
+    top: 44%;
   }
   .photo-3 {
-    transform: rotate(-12deg);
-    background-image: url(./images/фото-3.jpg);
-    left: 64%;
-    top: 23%;
+    top: 18%;
   }
   .photo-4 {
-    transform: rotate(7deg);
-    background-image: url(./images/фото-4.jpg);
-    left: 64%;
-    top: 42%;
+    top: 44%;
+  }
+
+  .left-photo,
+  .right-photo {
+    width: 80px;
   }
 
   .photo-1,
@@ -741,13 +742,13 @@ body {
   }
 
   .dress-photo-1 {
-    left: 4%;
-    top: 15%;
+    top: -70%;
+    left: -180%;
     transform: rotate(-8deg);
   }
   .dress-photo-2 {
-    left: 66%;
-    top: 15%;
+    top: -70%;
+    right: -180%;
     transform: rotate(8deg);
   }
   .dress-photo-1,
