--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,17 @@
   margin: 0;
   font-family: "Rosarium";
 }
+
+#location {
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#location:hover {
+  color: rgb(76, 76, 76);
+  transition: 0.3s;
+}
+
 body {
   font-size: 24px;
 }
