--- a/отсчет.css
+++ b/отсчет.css
@@ -18,3 +18,14 @@
   font-size: 0.8em;
   color: #999;
 }
+
+@media screen and (max-width: 420px) {
+  .countdown-item span {
+    display: block;
+    font-size: 1.5em;
+  }
+  .label {
+    font-size: 0.6em;
+    color: #999;
+  }
+}
