--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ body {
 
 .schedule .timeline {
   height: 10px;
-  width: 80%;
+  width: 95%;
   background-color: #cf6363;
   display: flex;
   align-items: center;
@@ -220,14 +220,14 @@ body {
 }
 
 .time-info {
-  width: 80%;
+  width: 95%;
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
 .time-info .block {
-  width: 10rem;
+  width: 12rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -371,7 +371,7 @@ body {
   }
 
   .info {
-    gap: 10rem;
+    gap: 5rem;
   }
 
   .info .block {
@@ -383,18 +383,11 @@ body {
   }
 
   .schedule {
-    gap: 3.5rem;
-  }
-
-  .schedule,
-  .schedule::before,
-  .schedule::after {
-    height: 750px;
+    gap: 1rem;
   }
 
   .schedule .timeline {
     height: 10px;
-    width: 80%;
   }
 
   .schedule .timeline .circle {
@@ -415,14 +408,14 @@ body {
   }
 
   .time-info {
-    width: 80%;
     display: flex;
     align-items: center;
     justify-content: space-around;
   }
 
   .time-info .block {
-    width: 10rem;
+    width: 12rem;
+    height: 10rem;
     gap: 1rem;
   }
 
@@ -538,23 +531,18 @@ body {
   }
 
   .schedule {
-    gap: 3rem;
-  }
-
-  .schedule,
-  .schedule::before,
-  .schedule::after {
-    height: 500px;
+    gap: 1rem;
   }
 
   .schedule .timeline {
     height: 10px;
-    width: 80%;
+    display: none;
   }
 
   .schedule .timeline .circle {
     height: 20px;
     width: 20px;
+    display: none;
   }
 
   .calendar {
@@ -570,10 +558,10 @@ body {
   }
 
   .time-info {
-    width: 80%;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
   }
 
   .time-info .block {
@@ -698,15 +686,8 @@ body {
     gap: 3rem;
   }
 
-  .schedule,
-  .schedule::before,
-  .schedule::after {
-    height: 450px;
-  }
-
   .schedule .timeline {
     height: 5px;
-    width: 80%;
   }
 
   .schedule .timeline .circle {
@@ -722,12 +703,11 @@ body {
   .calendar .heart {
     width: 36px;
     height: 29px;
-    right: 0;
+    right: -1%;
     top: 56%;
   }
 
   .time-info {
-    width: 80%;
     gap: 0;
   }
 
@@ -735,6 +715,7 @@ body {
     width: 5rem;
     gap: 0.2rem;
     font-size: 0.7rem;
+    height: 6rem;
   }
 
   .dress-code {
